fix filters overflow

--- a/css/2-layouts/search.scss
+++ b/css/2-layouts/search.scss
@@ -196,6 +196,7 @@
         min-height: em(68px);
         @include media($mobile){
           margin-bottom: 130px;
+          width: 100%;
         }
         .select-box {
           position: relative;
